# taskell

./: .gitignore  Cargo.toml
migrations/2023-02-04-073124_taskell_init/: up.sql
migrations/2023-02-04-083858_add_login_info_table/: down.sql  up.sql
migrations/2023-02-05-050820_add_tasks_table/: up.sql
migrations/2023-02-05-051312_add_name_column_to_tasks/: up.sql
migrations/2023-02-05-062540_add_done_tasks_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  task.rs  utils.rs
