[package]
name = "taskell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"]}
clap = { version= "4.1.4", features = ["derive"]}
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
rust-crypto = "0.2"
mac_address = "1.1.4"
